NetBSD Problem Report #56963

From mark@ecs.vuw.ac.nz  Wed Aug 10 02:58:10 2022
Return-Path: <mark@ecs.vuw.ac.nz>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 35DA91A921F
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 10 Aug 2022 02:58:10 +0000 (UTC)
Message-Id: <202208100258.27A2w3wY001659@turakirae.ecs.vuw.ac.nz>
Date: Wed, 10 Aug 2022 14:58:03 +1200 (NZST)
From: mark@ecs.vuw.ac.nz
Reply-To: mark@ecs.vuw.ac.nz
To: gnats-bugs@NetBSD.org
Subject: inetd not configured for rpc
X-Send-Pr-Version: 3.95

>Number:         56963
>Category:       bin
>Synopsis:       inetd not configured for rpc
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 10 03:00:00 +0000 2022
>Closed-Date:    Tue Aug 23 05:55:18 +0000 2022
>Last-Modified:  Tue Aug 23 05:55:18 +0000 2022
>Originator:     Mark Davies
>Release:        NetBSD 9.99.99
>Organization:
ECS, Victoria Uni. of Wellington, New Zealand.
>Environment:


System: NetBSD green-mountain.ecs.vuw.ac.nz 9.99.99 NetBSD 9.99.99 (GENERIC) #9: Sat Jul 30 17:06:37 NZST 2022 mark@turakirae.ecs.vuw.ac.nz:/local/SAVE/cur64.obj/src/work/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	Trying to configure an rpc service in inetd.conf results in the error:
              "rpc services not supported"

>How-To-Repeat:
	uncomment one of the prc services in inetd.conf

>Fix:
	When parse.c was split out of inetd.c the code setting the define RPC was not
	copied over.  The below patch copies it from inetd.c but probably should move it
	from both inetd.c and parse.c to inetd.h

Index: parse.c
===================================================================
RCS file: /src/cvs/netbsd/src/usr.sbin/inetd/parse.c,v
retrieving revision 1.3
diff -u -r1.3 parse.c
--- parse.c     22 May 2022 11:27:37 -0000      1.3
+++ parse.c     4 Aug 2022 05:00:57 -0000
@@ -93,6 +93,16 @@

 #include "inetd.h"

+#ifndef NO_RPC
+#define RPC
+#endif
+
+#ifdef RPC
+#include <rpc/rpc.h>
+#include <rpc/rpcb_clnt.h>
+#include <netconfig.h>
+#endif
+
 static void    config(void);
 static void    endconfig(void);
 static struct servtab  *enter(struct servtab *);

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56963 CVS commit: src/usr.sbin/inetd
Date: Wed, 10 Aug 2022 03:35:39 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Wed Aug 10 03:35:39 UTC 2022

 Modified Files:
 	src/usr.sbin/inetd: Makefile inetd.c parse.c

 Log Message:
 PR bin/56963 Mark Davies: inetd not configured for rpc

 Instead of using negative flags to turn on positive flags, set -DRPC
 in the makefile. Corrects a problem where the SunRPC code in parse.c
 was accidentally left disabled.

 This is a prime example of why we don't like negative flags...


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.31 src/usr.sbin/inetd/Makefile
 cvs rdiff -u -r1.139 -r1.140 src/usr.sbin/inetd/inetd.c
 cvs rdiff -u -r1.3 -r1.4 src/usr.sbin/inetd/parse.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 10 Aug 2022 04:14:44 +0000
State-Changed-Why:
I fixed it differently, please check that I didn't mess up somehow :-|


From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56963 CVS commit: src/usr.sbin/inetd
Date: Wed, 10 Aug 2022 04:37:53 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Wed Aug 10 08:37:53 UTC 2022

 Modified Files:
 	src/usr.sbin/inetd: inetd.c inetd.h parse.c

 Log Message:
 PR/56963: Mark Davies: inetd not configured for rpc
 Move RPC includes to inetd.h


 To generate a diff of this commit:
 cvs rdiff -u -r1.140 -r1.141 src/usr.sbin/inetd/inetd.c
 cvs rdiff -u -r1.5 -r1.6 src/usr.sbin/inetd/inetd.h
 cvs rdiff -u -r1.4 -r1.5 src/usr.sbin/inetd/parse.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: markd@NetBSD.org
State-Changed-When: Tue, 23 Aug 2022 05:55:18 +0000
State-Changed-Why:
confirmed working again.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.