usr.sbin/inetd/parse.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: parse.c,v 1.3 2022/05/22 11:27:37 andvar Exp $	*/
+/*	$NetBSD: parse.c,v 1.4 2022/08/10 03:35:38 dholland Exp $	*/
 
 /*-
  * Copyright (c) 1998, 2003 The NetBSD Foundation, Inc.
@@ -64,7 +64,7 @@
 #if 0
 static char sccsid[] = "@(#)inetd.c	8.4 (Berkeley) 4/13/94";
 #else
-__RCSID("$NetBSD: parse.c,v 1.3 2022/05/22 11:27:37 andvar Exp $");
+__RCSID("$NetBSD: parse.c,v 1.4 2022/08/10 03:35:38 dholland Exp $");
 #endif
 #endif /* not lint */
 
@@ -90,6 +90,10 @@ __RCSID("$NetBSD: parse.c,v 1.3 2022/05/22 11:27:37 andvar Exp $");
 #include <string.h>
 #include <syslog.h>
 #include <unistd.h>
+
+#ifdef RPC
+#include <rpc/rpc.h>
+#endif
 
 #include "inetd.h"
 
@@ -321,7 +325,7 @@ config(void)
 				if (sep->se_fd != -1)
 					register_rpc(sep);
 			} else
-#endif
+#endif /* RPC */
 			{
 				if (sep->se_fd >= 0)
 					close_sep(sep);
